--- a/Week3/bank/src/main/webapp/partials/login.html
+++ b/Week3/bank/src/main/webapp/partials/login.html
@@ -2,7 +2,8 @@
 	<h1>Login and Registration Page</h1>
 	<input type="text" id="email" placeholder ="Enter username or email"><br>
 	<input type="password" id="pass" placeholder="Enter Password"><br>
-	<button id="login">Log in</button>
-	<button id="register">Register</button>
+	<button class="btn btn-submit" id="login">Log in</button>
+	<button class="btn btn-submit" id="register">Register</button>
+	<p class="danger" id="message"></p>
 
 </div>
