--- a/Week3/bank/src/main/webapp/partials/login.html
+++ b/Week3/bank/src/main/webapp/partials/login.html
@@ -1,4 +1,4 @@
-<div class="jumbotron container">
+<div class="jumbotron container form-control" >
 	<h1>Login and Registration Page</h1>
 	<input type="text" id="email" placeholder ="Enter username or email"><br>
 	<input type="password" id="pass" placeholder="Enter Password"><br>
