--- a/Week3/bank/src/main/webapp/partials/navbar.html
+++ b/Week3/bank/src/main/webapp/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" href="/">
-		<h2>Angular</h2>
+		<h2>Home</h2>
 	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse"
 		data-target="#navbarColor02" aria-controls="navbarColor02"
@@ -13,15 +13,10 @@
 		<ul class="nav navbar-nav mr-auto">
 			<li class="dropdown"><a class="dropdown-toggle"
 				data-toggle="dropdown" role="button" aria-haspopup="true"
-				aria-expanded="false">Core Concepts</a></li>
+				aria-expanded="false">My Accounts</a></li>
 		</ul>
 		<ul class="nav navbar-nav mr-auto">
-			<li class="dropdown"><a class="dropdown-toggle"
-				data-toggle="dropdown" role="button" aria-haspopup="true"
-				aria-expanded="false">About</a>
-				<ul class="dropdown-menu">
-					<li><a>Test</a></li>
-				</ul></li>
+			<li>Logout</li>
 		</ul>
 	</div>
 </nav>
