--- a/Week3/bank/src/main/webapp/partials/navbar.html
+++ b/Week3/bank/src/main/webapp/partials/navbar.html
@@ -1,22 +1,26 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="/">
-		<h2>Home</h2>
-	</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse"
-		data-target="#navbarColor02" aria-controls="navbarColor02"
-		aria-expanded="false" aria-label="Toggle navigation" style="">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarColor02">
-		<ul class="nav navbar-nav mr-auto">
-		</ul>
-		<ul class="nav navbar-nav mr-auto">
-			<li class="dropdown"><a class="dropdown-toggle"
-				data-toggle="dropdown" role="button" aria-haspopup="true"
-				aria-expanded="false">My Accounts</a></li>
-		</ul>
-		<ul class="nav navbar-nav mr-auto">
-			<li>Logout</li>
-		</ul>
-	</div>
+<div class = "jumbotron container">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<nav class="navbar navbar-inverse">
+ <div class="container-fluid">
+   <div class="navbar-header">
+     <a class="navbar-brand" href="#">WebSiteName</a>
+   </div>
+   <ul class="nav navbar-nav">
+     <li class="active"><a id = "home">Home</a></li>
+     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+       <ul class="dropdown-menu">
+         <li><a href="#">Page 1-1</a></li>
+         <li><a href="#">Page 1-2</a></li>
+         <li><a href="#">Page 1-3</a></li>
+       </ul>
+     </li>
+     <li><a href="#">Page 2</a></li>
+   </ul>
+   <ul class="nav navbar-nav navbar-right">
+     <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+     <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+     <li><a id="logout" href="index.html">Logout</a></li>
+   </ul>
+ </div>
 </nav>
