--- a/Week3/bank/src/main/webapp/partials/navbar.html
+++ b/Week3/bank/src/main/webapp/partials/navbar.html
@@ -20,7 +20,7 @@
    <ul class="nav navbar-nav navbar-right">
      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-     <li><a id="logout" href="index.html">Logout</a></li>
+     <li><a id="logout" >Logout</a></li>
    </ul>
  </div>
 </nav>
