Evening and Morning Work

--- a/Katelyn_Peterson_Code/Week3/bank/src/main/webapp/partials/login.html
+++ b/Katelyn_Peterson_Code/Week3/bank/src/main/webapp/partials/login.html
@@ -6,5 +6,7 @@
     <input type = "password" id = "pass" placeholder = "Enter password" required = "required" /> <br />
     <button id = "login">Log In</button>
     <button id = "register">Register</button>
+    <br />
+    <p class = "danger" id = "message"></p>
 
 </div>
