--- a/Week3/bank/src/main/webapp/partials/home.html
+++ b/Week3/bank/src/main/webapp/partials/home.html
@@ -2,9 +2,11 @@
 	Welcome to your bank <span id="name"></span>!
 </h1>
 Here are your accounts:
-<table>
-	<tr>
-		<th>Account No.</th>
-		<th>Balance</th>
-	</tr>
+<table id="accTable" class="display">
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Balance</th>
+		</tr>
+	</thead>
 </table>
