--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/decoration.css
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/decoration.css
@@ -15,7 +15,7 @@ body
 	line-height: 1.5em;	
 }
 
-header, nav
+nav
 {
 	background: rgba(167,175,144,0.96);
 	background: -webkit-linear-gradient(315deg,rgba(68,63,67,0.96),rgba(167,175,144,0.96)); /* For Safari 5.1 to 6.0 */
@@ -49,6 +49,42 @@ footer
 	text-align: center;
 	font-style: italic;	
 	font-size: .70em;
+}
+
+/* nav elements */
+nav ul 
+{
+  display: flex;
+   flex-wrap: wrap;
+   justify-content: flex-start;
+   align-items: flex-end;
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+nav ul li 
+{		
+   margin: 0;
+   padding: 0;
+   position: relative;
+   transition: all linear 0.1s;
+}
+
+nav > ul > li > a 
+{
+   align-items: center;
+   color: #ECF0E9;
+   display: flex;
+   font-size: 1.5em;
+   font-weight: 200;
+   letter-spacing: 1px;
+   max-width: 135px;
+   padding: 10px 15px;
+   padding-left: 20px;
+   text-decoration: none;
+   text-shadow: 0 1px 1px rgba(0,0,0,.1);
+   transition: all linear 0.1s;
 }
 
 /* Form */
