--- a/Katelyn_Peterson_Code/Week3/bank/src/main/webapp/partials/login.html
+++ b/Katelyn_Peterson_Code/Week3/bank/src/main/webapp/partials/login.html
@@ -1,12 +1,9 @@
-<div class = "jumbotron container">
-
-    <h1>Login and Registration</h1>
-
-    <input type = "text" id = "email" placeholder = "Enter username or email" required = "required" /><br />
-    <input type = "password" id = "pass" placeholder = "Enter password" required = "required" /> <br />
-    <button id = "login">Log In</button>
-    <button id = "register">Register</button>
-    <br />
-    <p class = "danger" id = "message"></p>
+<div class="jumbotron container form-control" >
+	<h1>Login and Registration Page</h1>
+	<input type="text" id="email" placeholder ="Enter username or email"><br>
+	<input type="password" id="pass" placeholder="Enter Password"><br>
+	<button class="btn btn-submit" id="login">Log in</button>
+	<button class="btn btn-submit" id="register">Register</button>
+	<p class="danger" id="message"></p>
 
 </div>
