--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/home.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/home.html
@@ -1,1 +1,6 @@
 <h1>Tuition Reimbursement Management System</h1>
+<p id="employee_name"></p>
+<p id="employee_type"></p>
+<div id="home_view">
+
+</div>
