--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Login.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Login.html
@@ -3,4 +3,5 @@
 	<input type="password" id="pass" placeholder="Enter Password"><br>
 	<button id="login">Log in</button>
 	<button id="register">Register</button>
+	<p class="danger" id="message"></p>
 </div>
