--- a/TRMS_Project/src/main/webapp/partials/register.html
+++ b/TRMS_Project/src/main/webapp/partials/register.html
@@ -3,13 +3,13 @@
 <br>
 <input type="text" id="ln" placeholder="Last Name">
 <br>
-<input type="text" id="username" placeholder="Username">
+<input type="text" id="uname" placeholder="Username">
 <br>
 <div class="alert alert-danger" id="message"></div>
 <input type="password" id="pass" placeholder="password">
 <br>
-<input type="text" id="bday" placeholder="Birthday">
-<br>
+<!-- <input type="text" id="bday" placeholder="Birthday">
+<br> -->
 <input type="text" id="addr" placeholder="Address">
 <br>
 <input type="text" id="zip" placeholder="Zip Code">
