--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
@@ -2,7 +2,7 @@
 	Welcome to your bank <span id="name"></span>!
 </h1>
 Here are your accounts:
-<table id="accTable" class="display">
+<table id="reimbursementTable" class="display">
 	<thead>
 		<tr>
 			<th>Id</th>
