--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">RevBank</a>
+  <a class="navbar-brand" href="#">TRMS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -9,7 +9,7 @@
         <a class="nav-link" id="home" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="accounts" href="#">test</a>
+        <a class="nav-link" id="request" href="#">Request</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="logout" href="#">Log Out</a>
