--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/login.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/login.html
@@ -1,11 +1,13 @@
-<h1>Tuition Reimbursement Management System</h1>
-<h2>Log In</h2>
+<div class="container">
+	<h1>Tuition Reimbursement Management System</h1>
+	<h2>Log In</h2>
+</div>
 <div id="login_box" class="jumbotron container form-control">
 	<label>User Name: </label> <input type="text" id="username"
 		name="username" placeholder="username"> <br> <br> <label>Password:</label>
 	<input type="password" id="pass" name="pasword" placeholder="password">
 	<br> <br>
-	<button class="btn btn-submit" id="login">Log in</button>
-	<button class="btn btn-submit" id="register">Register</button>
+	<button class="btn btn-submit btn-primary" id="login">Log in</button>
+	<button class="btn btn-submit btn-primary" id="register">Register</button>
 	<p class="danger" id="message"></p>
 </div>
