--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/navbar.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/navbar.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<strong>TRMS SYSTEM</strong><br>
-	<button id="logout">Log Out</button>
+	<strong>TRMS</strong><br>
+	<button id="logout" class="btn btn-warning">Log Out</button>
 	<hr>
 </div>
