--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/register.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/register.html
@@ -1,49 +1,49 @@
-<div id="reg_form" class="container">
+<div class="container">
 	<h1>TRMS Registration</h1>
-	<br>
-
+</div>
+<div id="reg_form" class="container jumbotron">
 	<p style="font-style: italic; color: red;">*Required</p>
 	<p>
-		First Name:* <input type="text" id="firstName" name="firstName"
+		<label>First Name:*</label> <input type="text" id="firstName" name="firstName"
 			placeholder="First Name"> <span class="hide text-danger"
 			id="fn-danger">First name is required.</span>
 	</p>
 
 
 	<p>
-		Last Name:* <input type="text" id="lastName" name="lastName"
+		<label>Last Name:*</label> <input type="text" id="lastName" name="lastName"
 			placeholder="Last Name"> <span class="hide text-danger"
 			id="ln-danger">Last name is required.</span>
 	</p>
 
 
 	<p>
-		Supervisor ID: <input type="number" id="supID" name="supervisorID"
+		<label>Supervisor ID:</label> <input type="number" id="supID" name="supervisorID"
 			placeholder="Supervisor ID">
 	</p>
 
 	<p>
-		Department Head ID: <input type="number" id="dhID"
+		<label>Department Head ID:</label> <input type="number" id="dhID"
 			name="DepartmentHeadID" placeholder="Department Head ID">
 	</p>
 
 	<p>
-		Benefits Coordinator ID: <input type="number" id="BenCoID"
+		<label>Benefits Coordinator ID:</label> <input type="number" id="BenCoID"
 			name="BenCoID" placeholder="Benefits Coordinator ID">
 	</p>
 
 	<p>
-		Department: <input type="text" id="department" name="department"
+		<label>Department:</label> <input type="text" id="department" name="department"
 			placeholder="Department">
 	</p>
 
 	<p>
-		Job Title: <input type="text" id="job" name="jobTile"
+		<label>Job Title:</label> <input type="text" id="job" name="jobTile"
 			placeholder="Job Title">
 	</p>
 
 	<p>
-		Username:* <input type="text" id="username" name="username"
+		<label>Username:*</label> <input type="text" id="username" name="username"
 			placeholder="Username"> <span class="hide text-danger"
 			id="un-danger-needed">Username is required.</span> <span
 			class="hide text-danger" id="un-danger-taken">Username is
@@ -52,14 +52,14 @@
 
 
 	<p>
-		Password:* <input type="password" id="pass" name="password"
+		<label>Password:*</label> <input type="password" id="pass" name="password"
 			placeholder="Password"> <span class="hide text-danger"
 			id="pw-danger">Password is required.</span>
 	</p>
 
 
 	<p>
-		Verify password:* <input type="password" id="passVerify"
+		<label>Verify password:*</label> <input type="password" id="passVerify"
 			name="passwordVerify" placeholder="Re-enter your password.">
 		<span class="hide text-danger" id="pw2-danger">Passwords do not
 			match.</span> <span class="hide text-danger" id="pw2-danger-needed">Password
@@ -68,7 +68,7 @@
 
 
 	<p>
-		Account Type: <select id="account_type">
+		<label>Account Type:</label> <select id="account_type">
 			<option value=0>Standard Employee</option>
 			<option value=1>Supervisor</option>
 			<option value=2>Department Head</option>
@@ -76,6 +76,6 @@
 		</select>
 	</p>
 
-	<button id="reg_submit">Register</button>
-	<button id="cancel">Cancel</button>
+	<button id="reg_submit" class="btn btn-success">Register</button>
+	<button id="cancel" class="btn btn-warning">Cancel</button>
 </div>
