made some changes to index.html (references to libraries) got table working (still needs to be edited to only display relevant information)

--- a/TRMS_Project/src/main/webapp/partials/home.html
+++ b/TRMS_Project/src/main/webapp/partials/home.html
@@ -1,12 +1,25 @@
 <h1>
-	Welcome to your bank <span id="name"></span>!
+	Employee page for <span id="name"></span>!
 </h1>
-Here are your accounts:
-<table id="accTable" class="display">
+<h2>test</h2>
+
+Here are your requests:
+<table id="reqTable" class="display">
 	<thead>
 		<tr>
-			<th>Id</th>
-			<th>Balance</th>
+			<th>requestId</th>
+			<th>eventType</th>
+			<th>startDate</th>
+			<th>endDate</th>
+			<th>location</th>
+			<th>description</th>
+			<th>cost</th>
+			<th>gradingStyleId</th>
+			<th>grade</th>
+			<th>requestDate</th>
+			<th>requestTime</th>
+			<th>flaggedId</th>
+			<th>approvalId</th>
 		</tr>
 	</thead>
 </table>
