--- a/TRMS_Project/src/main/webapp/partials/navbar.html
+++ b/TRMS_Project/src/main/webapp/partials/navbar.html
@@ -9,7 +9,7 @@
         <a class="nav-link" id="home" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="accounts" href="#">test</a>
+        <a class="nav-link" id="requests" href="#">Requests</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="logout" href="#">Log Out</a>
