Add logout plus experiments

--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
@@ -1,7 +1,7 @@
-<h1>
+<h2>
 	Welcome to your bank <span id="name"></span>!
-</h1>
-Here are your accounts:
+</h2>
+<!-- Here are your accounts:
 <table id="reimbursementTable" class="display">
 	<thead>
 		<tr>
@@ -9,4 +9,13 @@ Here are your accounts:
 			<th>Balance</th>
 		</tr>
 	</thead>
-</table>
+</table> -->
+
+<div id="attachGrades"></div>
+<form>
+	<h1>Reimbursement Request Form</h1>
+	<div class="form-group">
+	<input type="text" class="form-control" id="firstname" placeholder="Enter your first name"></div>
+	<input type="text" class="form-control" id="lastname" placeholder="Enter your last name">
+	
+</form>
