--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
@@ -9,7 +9,10 @@
         <a class="nav-link" id="home" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="request" href="#">Request</a>
+        <a class="nav-link" id="reimbursements" href="#">Reimbursments</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="events" href="#">Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="logout" href="#">Log Out</a>
