--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
@@ -1,4 +1,4 @@
-<h2>
+<h2 style="text-align:center">
 	Welcome to your bank <span id="name"></span>!
 </h2>
 <!-- Here are your accounts:
@@ -12,10 +12,43 @@
 </table> -->
 
 <div id="attachGrades"></div>
-<form>
-	<h1>Reimbursement Request Form</h1>
-	<div class="form-group">
-	<input type="text" class="form-control" id="firstname" placeholder="Enter your first name"></div>
-	<input type="text" class="form-control" id="lastname" placeholder="Enter your last name">
-	
-</form>
+<div class="container jumbotron">
+	<form>
+		<h1>Reimbursement Request Form</h1>
+		<input type="text" class="form-control" id="firstname" placeholder="Enter your first name">
+		<input type="text" class="form-control" id="lastname" placeholder="Enter your last name">
+		<input type="datetime" class="form-control" id="date">
+		<input type="text" class="form-control" id="location" placeholder="Enter a location">
+		<input type="text" class="form-control" id="description" placeholder="Enter a description">
+		<input type="number" class="form-control" id="cost" placeholder="Enter projected cost">
+		<select class="custom-select">
+			<option value="1" selected>Grade</option>
+			<option value="2">Presentation</option>
+		</select>
+		<select class="custom-select">
+			<option value="1" selected>University Course</option>
+			<option value="2">Seminar</option>
+			<option value="3">Certification Preparation Class</option>
+			<option value="4">Certification</option>
+			<option value="5">Technical Training</option>
+			<option value="6">Other</option>
+		</select>
+		<input type="text" class="form-control" id="justification" placeholder="Justification">
+		<div class="custom-file">
+			<input type="file" class="custom-file-input" id="customFile">
+			<label class="custom-file-label" for="customFile">Choose file</label>
+		</div>
+		<div class="custom-control custom-checkbox">
+			<input type="checkbox" class="custom-control-input" id="check1">
+			<label class="custom-control-label" for="check1">Direct Supervisor Approval</label>
+		</div>
+		<div class="custom-control custom-checkbox">
+			<input type="checkbox" class="custom-control-input" id="check2">
+			<label class="custom-control-label" for="check2">Department Head Approval</label>
+		</div>
+		<br>
+		<input type="text" class="form-control" placeholder="Projected Reimbursement" readonly>
+		<br>
+		<button type="button" class="btn btn-primary" id="submitReimbursement">Submit</button>
+	</form>
+</div>
