--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/home.html
@@ -1,10 +1,23 @@
 <h1>
-	Welcome to your bank <span id="name"></span>!
+	Welcome to your Tuition Reimbursement Portal <span id="name"></span>!
 </h1>
-Here are your accounts:
-<table>
-	<tr>
-		<th>Account No.</th>
-		<th>Balance</th>
-	</tr>
+Here are your reimbursement forms
+<br />
+<table id="formTable" class="display">
+	<thead>
+		<tr>
+			<!-- If there is time, pull the name of the Employee who submitted the Request and add to top -->
+			<th>Form ID</th>
+			<th>Date Submitted</th>
+			<th>Start Date</th>
+			<th>Location</th>
+			<th>Training Cost</th>
+			<th>Grading Format</th>
+			<th>Supervisor Approval</th>
+			<th>Department Approval</th>
+			<th>BenCo Approval</th>
+			<th>Grade Earned</th>
+			<th>Reimbursement Awarded</th>
+		</tr>
+	</thead>
 </table>
