--- a/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/login.html
+++ b/Katelyn_Peterson_Code/Week3/TRMS_Project_One/src/main/webapp/partials/login.html
@@ -1,24 +1,26 @@
-<div class = "jumbotron container">
+<div>
 
     <h1>Login</h1>
 
-    <form>
-					
-        <fieldset>
+		<div id = "myForm">
+        
+            <div id = "myFieldset">
             
-            <label for = "email">Email</label>
-            <input type = "text" name = "email" id = "email" required = "required" />
+                <label for = "email">Email</label>
+                <input type = "text" id = "email" required = "required" />
+            
+                <label for = "myLName">Password</label>
+                <input type = "password" id = "password" required = "required" />
+
+            </div>
         
-            <label for = "myLName">Password</label>
-            <input type = "password" name = "password" id = "password" required = "required" />
-        
-        </fieldset>
+        </div>
         
         <button id = "login" class="btn btn-lg btn-success btn-block">Log In</button>
         <!-- <button id = "register" class="btn btn-lg btn-primary btn-block">Register</button> -->
         <br />
         <p class = "danger" id = "message"></p>
-        
+     
         <!--  Implement if possible, for now, just the basics
         <div>
             <label for="" class="pull-left checkbox-inline" >
@@ -27,7 +29,6 @@
             <a href="#" class="pull-right"></a>
         </div>
         -->
-        
-    </form>
+     
 
 </div>
