--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/home.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/home.html
@@ -26,18 +26,20 @@
 			<br>
 			<div id="view_rr" class="container">
 				<table id="reimbursements_table"
-					class="table table-condensed table-hover">
+					class="table table-condensed table-hover" style="max-width: 100%;">
 					<thead>
 						<tr>
 							<th>Reimbursement ID</th>
 							<th>Submission Date</th>
 							<th>Event Date</th>
-							<th>Requested Money</th>
+							<th>Event Type</th>
+							<th>Total Cost</th>
 							<th>Status</th>
+							<th>Received Reimbursement</th>
 							<th>More Info</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="r_table_body">
 
 					</tbody>
 				</table>
