--- a/William_Rosser_Code/Project 1/src/main/webapp/partials/manage_requests.html
+++ b/William_Rosser_Code/Project 1/src/main/webapp/partials/manage_requests.html
@@ -1,1 +1,25 @@
-Manage Requests
+<div class="container jumbotron">
+	<h2>Manage Requests</h2>
+	<table id="requests_table" class="table table-condensed table-hover">
+		<thead>
+			<tr>
+				<th>Reimbursement ID</th>
+				<th>Submitted By</th>
+				<th>Submission Date</th>
+				<th>Event Date</th>
+				<th>Event Type</th>
+				<th>Event Cost</th>
+				<th>Expected Reimbursement Amount</th>
+				<th>Status</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody id="r_t_body">
+		
+		</tbody>
+	</table>
+	<div id="actions">
+		<button class="btn btn-success" id="submit">Save & Apply</button>
+		<button class="btn btn-warning" id="cancel">Cancel</button>
+	</div>
+</div>
