submitting a new request works; trying to fix table of requests now

--- a/TRMS_Project/src/main/webapp/partials/home.html
+++ b/TRMS_Project/src/main/webapp/partials/home.html
@@ -1,9 +1,8 @@
 <h1>
 	Employee page for <span id="name"></span>!
 </h1>
-<h2>test</h2>
 
-Here are your requests:
+Here are your reimbursement requests:
 <table id="reqTable" class="display">
 	<thead>
 		<tr>
