--- a/TRMS_Project/src/main/webapp/partials/register.html
+++ b/TRMS_Project/src/main/webapp/partials/register.html
@@ -16,11 +16,7 @@
 <br>
 <input type="text" id="title" placeholder="Work Title">
 <br>
-<input type="text" id="sup" placeholder="Supervisor ID">
-<br>
-<input type="text" id="head" placeholder="Dept. Head ID">
-<br>
-<input type="text" id="ben" placeholder="BenCo ID">
+<input type="text" id="dept" placeholder="Department ID">
 <br>
 <input type="text" id="app" placeholder="Approved Funds">
 <br>
