--- a/TRMS_Project/src/main/webapp/partials/login.html
+++ b/TRMS_Project/src/main/webapp/partials/login.html
@@ -1,7 +1,7 @@
 <div class="jumbotron container">
 
 	<h1>Login and Registration Page</h1>
-	<input type="text" id="email" placeholder="username/email"><br>
+	<input type="text" id="username" placeholder="username/email"><br>
 	<input type="password" id="pass" placeholder="password"><br>
 	<button id="login">Log In</button>
 	<button id="register">Register</button>
