--- a/TRMS_Project/src/main/webapp/partials/navbar.html
+++ b/TRMS_Project/src/main/webapp/partials/navbar.html
@@ -6,13 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" id="home" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" id="home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="requests" href="#">Requests</a>
+        <a class="nav-link" id="created">New Request</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="logout" href="#">Log Out</a>
+        <a class="nav-link" id="logout">Log Out</a>
       </li>
     </ul>
   </div>
