got the table working

--- a/TRMS_Project/src/main/webapp/partials/home.html
+++ b/TRMS_Project/src/main/webapp/partials/home.html
@@ -6,7 +6,7 @@ Here are your reimbursement requests:
 <table id="reqTable" class="display">
 	<thead>
 		<tr>
-			<th>requestId</th>
+			<!-- th>requestId</th>
 			<th>eventType</th>
 			<th>startDate</th>
 			<th>endDate</th>
@@ -18,7 +18,18 @@ Here are your reimbursement requests:
 			<th>requestDate</th>
 			<th>requestTime</th>
 			<th>flaggedId</th>
-			<th>approvalId</th>
+			<th>approvalId</th> -->
+			<th>ID</th>
+			<th>Type</th>
+			<th>Start</th>
+			<th>End</th>
+			<th>Location</th>
+			<th>Description</th>
+			<th>Cost</th>
+			<th>Grade</th>
+			<th>Req. Date</th>
+			<th>Req. Time</th>
+			<th>Approval</th>			
 		</tr>
 	</thead>
 </table>
