--- a/TRMS_Project/src/main/webapp/partials/home.html
+++ b/TRMS_Project/src/main/webapp/partials/home.html
@@ -2,7 +2,7 @@
 	Employee page for <span id="name"></span>!
 </h1>
 
-Here are your reimbursement requests:
+<h3>Here are your reimbursement requests:</h3>
 <table id="reqTable" class="display">
 	<thead>
 		<tr>
@@ -12,7 +12,7 @@ Here are your reimbursement requests:
 			<th>endDate</th>
 			<th>location</th>
 			<th>description</th>
-			<th>cost</th>
+			<th>cost</th>					dont use this
 			<th>gradingStyleId</th>
 			<th>grade</th>
 			<th>requestDate</th>
