--- a/TRMS_Project/src/main/webapp/partials/login.html
+++ b/TRMS_Project/src/main/webapp/partials/login.html
@@ -1,6 +1,6 @@
-<div class="jumbotron container">
+<div class="jumbotron container jumbotron-dark bg-dark">
 
-	<h1>Login and Registration Page</h1>
+	<h1 style="color:white">Login and Registration Page</h1>
 	<input type="text" id="username" placeholder="username/email"><br>
 	<input type="password" id="pass" placeholder="password"><br>
 	<button id="login">Log In</button>
