--- a/TRMS_Project/src/main/webapp/partials/register.html
+++ b/TRMS_Project/src/main/webapp/partials/register.html
@@ -1,12 +1,12 @@
 <h1>Registration</h1>
-<input type="text" id="fn" placeholder="First Name">
+<input type="text" id="fn" placeholder="First Name" required>
 <br>
-<input type="text" id="ln" placeholder="Last Name">
+<input type="text" id="ln" placeholder="Last Name" required>
 <br>
-<input type="text" id="uname" placeholder="Username">
+<input type="text" id="uname" placeholder="Username" required>
 <br>
 <div class="alert alert-danger" id="message"></div>
-<input type="password" id="pass" placeholder="password">
+<input type="password" id="pass" placeholder="password"required>
 <br>
 <!-- <input type="text" id="bday" placeholder="Birthday">
 <br> -->
