--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/FormInfo.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/FormInfo.html
@@ -1,11 +1,13 @@
- Result Size: 1268 x 958
-
+<button id="approve" style="width: 20%; display: none;">Approve</button> 
+<button id="deny" style="width: 20%; display: none;">Deny</button>
 <table id="table_id" class="display">
 
 	<thead>
 
 		<tr>
-
+			
+			<th>Request ID</th>
+			
 			<th>Status</th>
 
 			<th>Creation Date</th>
@@ -21,8 +23,6 @@
 			<th>Cost</th>
 
 			<th>Reason</th>
-
-			<th>Attachment</th>
 
 			<th>Event Start Time</th>
 
