--- a/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Home.html
+++ b/Server_projects/TomCat Work/TRMS/src/main/webapp/partials/Home.html
@@ -5,4 +5,4 @@
 <button id="check_form" style="width: 20%;">Check Request</button>
 <br>
 <br>
-<button id="aprove_forms" style="width: 20%; style="display:none;">Approve Forms</button>
+<button id="approve_forms" style="width: 20%; display: none;">Approve Forms</button>
