--- a/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/login.html
+++ b/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/login.html
@@ -1,4 +1,5 @@
 <div class="login-form">
+<div class="backdrop">
         <h2 class="text-center">Login</h2>
         <div class="form-group">
             <input id="email" type="email" class="form-control" required="required" placeholder="Email">
@@ -12,5 +13,6 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary btn-block" id="register">register</button>
+        </div>
         </div>
 </div>
