--- a/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/navbar.html
+++ b/Joseph_Moses_Code/Week3/TRMS/src/main/webapp/partials/navbar.html
@@ -1,26 +1,24 @@
-<div id="navbar"><nav class="navbar navbar-expand-lg navbar-dark mx-background-top-linear">
-    <div class="container">
-      
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse" id="navbarResponsive" style="">
+<div id="navbar">
+	<nav
+		class="navbar navbar-expand-lg navbar-dark mx-background-top-linear">
+		
+			<div class="container">
 
-        <ul class="navbar-nav ml-auto">
+				<button class="navbar-toggler collapsed" type="button"
+					data-toggle="collapse" data-target="#navbarResponsive"
+					aria-controls="navbarResponsive" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="navbar-collapse collapse" id="navbarResponsive" style="">
 
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
+					<ul class="navbar-nav ml-auto">
 
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="logout" href="#">Logout</a>
-          </li>       
-        </ul>
-      </div>
-    </div>
-  </nav></div>
+						<li class="nav-item"><a class="nav-link" id="logout" href="#">Logout</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+	</nav>
+</div>
