little closer on the register function. learned how select elements work, at least.

--- a/TRMS/WebContent/partials/register.html
+++ b/TRMS/WebContent/partials/register.html
@@ -1,69 +1,74 @@
 <div class="text-center" style="padding:50px 0">
 	<div class="logo">Create a new account</div>
 	
-	<input type="text" id="fn" placeholder="First Name"> <br>
+	<input type="text" id="fn" placeholder="First Name">
 	<input type="text" id="ln" placeholder="Last Name"> <br>
 	<input type="email" id="email" placeholder="Email Address"> <br>
 		<div class="alert alert-danger" id="message" ></div>
 	<input type="date" id="dob" placeholder="Date of Birth"> <br>
+	<select id="dept">
+		<option selected="selected" disabled>Dept.</option>
+		<option value="1">Accounting</option>
+		<option value="2">Marketing</option>
+		<option value="3">IT</option>
+	</select><br>
 	<input type="text" id="address" placeholder="Address"> <br>
 	<input type="text" id="city" placeholder="City"> <br>
-	<div class="dropdown">
-	  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
-	  <span class="caret"></span></button>
-	  <ul class="dropdown-menu">
-	    <li>Alabama</li>
-		<li>Alaska</li>
-		<li>Arizona</li>
-		<li>Arkansas</li>
-		<li>California</li>
-		<li>Colorado</li>
-		<li>Connecticut</li>
-		<li>Delaware</li>
-		<li>Florida</li>
-		<li>Georgia</li>
-		<li>Hawaii</li>
-		<li>Idaho</li>
-		<li>Illinois</li>
-		<li>Indiana</li>
-		<li>Iowa</li>
-		<li>Kansas</li>
-		<li>Kentucky</li>
-		<li>Louisiana</li>
-		<li>Maine</li>
-		<li>Maryland</li>
-		<li>Massachusetts</li>
-		<li>Michigan</li>
-		<li>Minnesota</li>
-		<li>Mississippi</li>
-		<li>Missouri</li>
-		<li>Montana</li>
-		<li>Nebraska</li>
-		<li>Nevada</li>
-		<li>New Hampshire</li>
-		<li>New Jersey</li>
-		<li>New Mexico</li>
-		<li>New York</li>
-		<li>North Carolina</li>
-		<li>North Dakota</li>
-		<li>Ohio</li>
-		<li>Oklahoma</li>
-		<li>Oregon</li>
-		<li>Pennsylvania</li>
-		<li>Rhode Island</li>
-		<li>South Carolina</li>
-		<li>South Dakota</li>
-		<li>Tennessee</li>
-		<li>Texas</li>
-		<li>Utah</li>
-		<li>Vermont</li>
-		<li>Virginia</li>
-		<li>Washington</li>
-		<li>West Virginia</li>
-		<li>Wisconsin</li>
-		<li>Wyoming</li>
-	  </ul>
-	</div>
+	
+	<select id="state">
+	  	<option selected="selected" disabled>State</option>
+	  	<option value="Alabama">Alabama</option>
+		<option value="Alaska">Alaska</option>
+		<option value="Arizona">Arizona</option>
+		<option value="Arkansas">Arkansas</option>
+		<option value="California">California</option>
+		<option value="Colorado">Colorado</option>
+		<option value="Conneticut">Connecticut</option>
+		<option value="Delaware">Delaware</option>
+		<option value="Florida">Florida</option>
+		<option value="Georgia">Georgia</option>
+		<option value="Hawaii">Hawaii</option>
+		<option value="Idaho">Idaho</option>
+		<option value="Illinois">Illinois</option>
+		<option value="Indiana">Indiana</option>
+		<option value="Iowa">Iowa</option>
+		<option value="Kansas">Kansas</option>
+		<option value="Kentucky">Kentucky</option>
+		<option value="Louisiana">Louisiana</option>
+		<option value="Maine">Maine</option>
+		<option value="Maryland">Maryland</option>
+		<option value="Massachusetts">Massachusetts</option>
+		<option value="Michigan">Michigan</option>
+		<option value="Minnesota">Minnesota</option>
+		<option value="Mississippi">Mississippi</option>
+		<option value="Missouri">Missouri</option>
+		<option value="Montana">Montana</option>
+		<option value="Nebraska">Nebraska</option>
+		<option value="Nevada">Nevada</option>
+		<option value="New Hampshire">New Hampshire</option>
+		<option value="New Jersey">New Jersey</option>
+		<option value="New Mexico">New Mexico</option>
+		<option value="New York">New York</option>
+		<option value="North Carolina">North Carolina</option>
+		<option value="North Dakota">North Dakota</option>
+		<option value="Ohio">Ohio</option>
+		<option value="Oklahoma">Oklahoma</option>
+		<option value="Oregon">Oregon</option>
+		<option value="Pennsylvania">Pennsylvania</option>
+		<option value="Rhode Island">Rhode Island</option>
+		<option value="South Carolina">South Carolina</option>
+		<option value="South Dakota">South Dakota</option>
+		<option value="Tennessee">Tennessee</option>
+		<option value="Texas">Texas</option>
+		<option value="Utah">Utah</option>
+		<option value="Vermont">Vermont</option>
+		<option value="Virginia">Virginia</option>
+		<option value="Washington">Washington</option>
+		<option value="West Virginia">West Virginia</option>
+		<option value="Wisconsin">Wisconsin</option>
+		<option value="Wyoming">Wyoming</option>
+	</select><br>
+	
 	<input type="password" id="pass" placeholder="Password"> <br>
 	<input type="password" id="passConfirm" placeholder="Confirm Password"><br>
 	<br>
