Implement all nav buttons

--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/home.html
@@ -1,5 +1,5 @@
 <h2 id="welcome-header" style="text-align:center">
-	Welcome, <span id="name"></span>!
+	
 </h2>
 <!-- Here are your accounts:
 <table id="reimbursementTable" class="display">
@@ -16,7 +16,8 @@
 	<form>
 		<h1>Reimbursement Request Form</h1>
 		<div class="form-group">
-			<input type="text" class="form-control" id="id" placeholder="Enter your first name">
+			<input type="text" class="form-control" id="firstname" readonly>
+			<input type="text" class="form-control" id="lastname" readonly>
 		</div>
 		<div class="form-group">
 			<h3>Event Information</h3>
