--- a/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
+++ b/Riley_Mathis_Code/TRMS/trms/src/main/webapp/partials/navbar.html
@@ -15,8 +15,11 @@
         <a class="nav-link" id="events" href="#">Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="logout" href="#">Log Out</a>
+        <a class="nav-link" id="approvals" href="#">Approvals</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" id="logout" href="#">Log Out</a>
+      </li> 
     </ul>
   </div>
 </nav>
