--- a/TRMS/WebContent/partials/navbar.html
+++ b/TRMS/WebContent/partials/navbar.html
@@ -16,7 +16,7 @@
         <a class="nav-link" id="submit" href="#">Submit New Reimbursement Request</a>
       </li>
       <li class="nav-item">
-      	<a class="nav-ling" id="messages" href="#">Messages</a>
+      	<a class="nav-link" id="messages" href="#">Messages</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="logout" href="#">Log Out</a>
