Tried touching up the css. Probably failed. Logout functionality is a go.

--- a/TRMS/WebContent/partials/home.html
+++ b/TRMS/WebContent/partials/home.html
@@ -1,12 +1,14 @@
-<h1>
-	Hello, <span id="name"></span>
-</h1>
-Notifications:
-<table id="noteTable" class="display">
-	<thead>
-		<tr>
-			<th>From:</th>
-			<th>Subject</th>
-		</tr>
-	</thead>
-</table>
+<div class = "jumbotron container">
+	<h1>
+		Hello, <span id="name"></span>
+	</h1>
+	Notifications:
+	<table id="noteTable" class="display">
+		<thead>
+			<tr>
+				<th>From:</th>
+				<th>Subject</th>
+			</tr>
+		</thead>
+	</table>
+</div>
