--- a/TRMS/WebContent/partials/navbar.html
+++ b/TRMS/WebContent/partials/navbar.html
@@ -1,25 +1,25 @@
-<div class = "jumbotron container">
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">RevBank</a>
+  <a class="navbar-brand" href="#">TRMS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" id="home" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" id="home" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="submit" href="#">Submit New Reimbursement Request</a>
+        <a class="nav-link" id="submit" href="#submit">Submit New Reimbursement Request</a>
       </li>
       <li class="nav-item">
-      	<a class="nav-link" id="messages" href="#">Messages</a>
+      	<a class="nav-link" id="messages" href="#messages">Messages</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" id="logout" href="#">Log Out</a>
+        <a class="nav-link" id="logout" href="#logout">Log Out</a>
       </li>
     </ul>
   </div>
