add user functionality

--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/home.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/home.html
@@ -1,1 +1,12 @@
-welcome fgt
+<h1>
+	Welcome to your tuition reimbursement portal, <span id="name"></span>!
+</h1>
+Here are your reimbursement requests:
+<table id="reimTable" class="display">
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Status</th>
+		</tr>
+	</thead>
+</table>
