--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/login.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/login.html
@@ -4,6 +4,7 @@
 <!-- 	  <form> -->
 			<input type="text" id="email" placeholder="email">
 			<input type="password" id="pass" placeholder="password">
+			<div class="alert alert-danger" id="message" ></div>
 			<input type="submit" id="login" class="login loginmodal-submit" value="Login">
 <!-- 	  </form> -->
 	  <div class="login-help">
