--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/reqform.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/reqform.html
@@ -1,10 +1,8 @@
 <div class="modal-dialog">
 	<div class="loginmodal-container">
-		<h1>Register An Account</h1><br>
-<!-- 	  <form> -->
+		<h1>Submit a Tuition Reimbursement Request</h1><br>
 			<input type="text" id="firstname" placeholder="First Name" style="width: 50%;"><input type="text" id="lastname" placeholder="Last Name" style="width: 50%;">
-			<select id="dept" style="width: 100%; height: 44px;""></select>
-			<div class="alert alert-danger" id="deptmessage" ></div><br><br>
+			<select id="dept"></select><br><br>
 			<input type="text" id="supfirstname" placeholder="Supervisor's First Name" style="width: 50%;"><input type="text" id="suplastname" placeholder="Supervisor's Last Name" style="width: 50%;">
 			<div class="alert alert-danger" id="supmessage" ></div>
 			<input type="text" id="email" placeholder="email">
@@ -14,10 +12,6 @@
 			<div class="alert alert-danger" id="passmessage" ></div>
 			<input type="checkbox" id="supervisor"> I am a project manager/supervisor.<br><br>
 			<input type="submit" id="doregister" class="login loginmodal-submit" value="Register">
-			<div class="alert alert success" id="success"><strong>Success!</strong> Your account has been registered. <a href="#" id="landing">Back to login.</a></div>
-<!-- 	  </form> -->
-	  <div class="login-help">
-			Back to Login - <a href="#" id="landing">Login</a>
-	  </div>
+
 	</div>
 </div>
