--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/register.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/register.html
@@ -3,7 +3,7 @@
 		<h1>Register An Account</h1><br>
 <!-- 	  <form> -->
 			<input type="text" id="firstname" placeholder="First Name" style="width: 50%;"><input type="text" id="lastname" placeholder="Last Name" style="width: 50%;">
-			<select id="dept" style="width: 100%; height: 44px;""></select>
+			<select id="dept" style="width: 100%; height: 44px;"></select>
 			<div class="alert alert-danger" id="deptmessage" ></div><br><br>
 			<input type="text" id="supfirstname" placeholder="Supervisor's First Name" style="width: 50%;"><input type="text" id="suplastname" placeholder="Supervisor's Last Name" style="width: 50%;">
 			<div class="alert alert-danger" id="supmessage" ></div>
