--- a/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/reqform.html
+++ b/Mark_Brandao_Code/Week 4/TRMS/src/main/webapp/partials/reqform.html
@@ -1,17 +1,28 @@
 <div class="modal-dialog">
 	<div class="loginmodal-container">
 		<h1>Submit a Tuition Reimbursement Request</h1><br>
-			<input type="text" id="firstname" placeholder="First Name" style="width: 50%;"><input type="text" id="lastname" placeholder="Last Name" style="width: 50%;">
-			<select id="dept"></select><br><br>
-			<input type="text" id="supfirstname" placeholder="Supervisor's First Name" style="width: 50%;"><input type="text" id="suplastname" placeholder="Supervisor's Last Name" style="width: 50%;">
-			<div class="alert alert-danger" id="supmessage" ></div>
+			
+			<select id="eventtype" style="width: 100%; height: 44px;">
+				<option value="">Type of Event</option>
+				<option value="1">University Course</option>
+				<option value="2">Seminar</option>
+				<option value="3">Certification Preparation Class</option>
+				<option value="4">Certification</option>
+				<option value="5">Technical Training</option>
+				<option value="6">Other</option>
+			</select><br><br>
+			
+			<input type="text" id="location" placeholder="Location">
+		
 			<input type="text" id="email" placeholder="email">
 			<div class="alert alert-danger" id="emailmessage" ></div>
+
+
 			<input type="password" id="pass" placeholder="password">
 			<input type="password" id="vpass" placeholder="verify password">
 			<div class="alert alert-danger" id="passmessage" ></div>
-			<input type="checkbox" id="supervisor"> I am a project manager/supervisor.<br><br>
-			<input type="submit" id="doregister" class="login loginmodal-submit" value="Register">
+			
+			<input type="submit" id="submitreq" class="login loginmodal-submit" value="Submit">
 
 	</div>
 </div>
